add arrow buttons and trouble number field

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "cmake.sourceDirectory": "${workspaceFolder}/linux"
+  "cmake.sourceDirectory": "${workspaceFolder}/linux",
+  "java.configuration.updateBuildConfiguration": "interactive",
+  "cSpell.words": ["autofocus"]
 }
