--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   masked_text: ^1.1.2
   flutter_localizations:
     sdk: flutter
+  awesome_dialog: ^3.0.2
 
 dev_dependencies:
   flutter_test:
